--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-12 col-sm-6 col-md-6 col-lg-3">
+          <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
             <div class="package-item">
               <h3 class="package-price">$300</h3>
               <h4 class="package-title">Business fair</h4>
@@ -198,7 +198,7 @@
               </div>
             </div>
           </div>
-          <div class="col-12 col-sm-6 col-md-6 col-lg-3">
+          <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
             <div class="package-item">
               <h3 class="package-price">$500</h3>
               <h4 class="package-title">wedding basic</h4>
@@ -229,7 +229,7 @@
               </div>
             </div>
           </div>
-          <div class="col-12 col-sm-6 col-md-6 col-lg-3">
+          <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
             <div class="package-item">
               <h3 class="package-price">$800</h3>
               <h4 class="package-title">Wedding plus</h4>
@@ -260,8 +260,8 @@
               </div>
             </div>
           </div>
-          <div class="col-12 col-sm-6 col-md-6 col-lg-3">
-            <div class="package-item">
+          <div class="col-12 col-sm-6 col-md-6 col-lg-4 m-lg-auto m-xl-0 col-xl-3">
+            <div class="package-item mb-lg-0">
               <h3 class="package-price">$1200</h3>
               <h4 class="package-title">Corporate event</h4>
               <p class="package-subtitle">For most corporate business events</p>
@@ -360,7 +360,7 @@
             <h2 class="package-header text-center fw-bold text-capitalize">Frequently Asked Questions</h2>
           </div>
         </div>
-        <div class="row flex-column-reverse flex-md-row gap-5 justify-content-center align-items-center">
+        <div class="row flex-column-reverse flex-md-row gap-5 gap-lg-0 justify-content-center align-items-center">
           <div class="col-lg-6">
             <div class="accordion" id="accordionExample">
               <div class="accordion-item border">
@@ -429,7 +429,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-5">
+          <div class="col-lg-6 col-xl-5">
             <img src="images/people.png" alt="people" class="w-100 img-fluid">
           </div>
         </div>
